[project]
name = "toolboxkit"
version = "1.0.0"
authors = [
  { name="Steve Lévesque" },
]
description = "A toolbox kit package with useful functions for Python projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/steve-levesque/toolboxkit-python"
Issues = "https://github.com/steve-levesque/toolboxkit-python/issues"